Reafctor predicate to reduce code duplication